--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.2.6",
     "@ngrx/effects": "^18.1.0",
     "@ngrx/store": "^18.1.0",
+    "@ngrx/store-devtools": "^18.1.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
